# Waybar

./: meson.build
include/modules/: backlight.hpp  backlight_slider.hpp  battery.hpp  bluetooth.hpp  cava.hpp  cffi.hpp  clock.hpp  cpu.hpp  cpu_frequency.hpp  cpu_usage.hpp  custom.hpp  disk.hpp  gamemode.hpp  inhibitor.hpp  jack.hpp  keyboard_state.hpp  network.hpp  pulseaudio.hpp  pulseaudio_slider.hpp  sndio.hpp  upower.hpp  user.hpp  wireplumber.hpp
include/modules/hyprland/: backend.hpp  workspaces.hpp
include/modules/sway/ipc/: client.hpp
include/util/: command.hpp  netdev_parser.hpp  string.hpp
src/: main.cpp
src/modules/: backlight.cpp  battery.cpp  bluetooth.cpp  cava.cpp  cffi.cpp  clock.cpp  custom.cpp  disk.cpp  gamemode.cpp  inhibitor.cpp  jack.cpp  keyboard_state.cpp  network.cpp  pulseaudio.cpp  pulseaudio_slider.cpp  sndio.cpp  upower.cpp  user.cpp  wireplumber.cpp
src/modules/cpu_frequency/: common.cpp  linux.cpp
src/modules/cpu_usage/: common.cpp  linux.cpp
src/modules/hyprland/: backend.cpp  language.cpp  submap.cpp  window.cpp  workspace.cpp  workspaces.cpp
src/modules/niri/: backend.cpp
src/modules/sni/: watcher.cpp
src/modules/sway/: language.cpp  mode.cpp  scratchpad.cpp  window.cpp  workspaces.cpp
src/modules/sway/ipc/: client.cpp
src/util/: netdev_parser.cpp  string.cpp
test/: meson.build
test/hyprland/: backend.cpp
test/hyprland/mocks/: MockSystemCalls.cpp  MockSystemCalls.hpp  mocksocket.hpp
test/sway/: client.cpp  meson.build
test/utils/: meson.build  netdev_parser.cpp
